--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,5 +5,5 @@ host_key_checking = False
 
 deprecation_warnings = False
 
-remote_user = sewan
+remote_user = qjmmragragio
 private_key_file = /.ssh/
